fix: fixed after review